add some styles

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -5,3 +5,9 @@
     width: 50%;
     height: 200px;
 }
+.posts-form input.form-control {
+    height: auto;
+}
+.recomended-reviews {
+    background: yellow
+}
