--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -10,8 +10,8 @@
       = f.label :problem
       = f.text_area :problem, class: 'form-control'
     .form-group
-      = f.label :code
-      = f.text_area :code, class: 'form-control'
+      = f.label :code, value: 'Embedded gist url'
+      = f.text_field :code, class: 'form-control'
     .form-group
       = f.label :review_questions
       = f.text_area :review_questions, class: 'form-control', placeholder: '1. Чем это решение хорошо? 2. Чем это решение плохо?'
