--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,7 +6,7 @@
       - @posts.each do |post|
         %tr
           %td
-            = link_to post.problem, post_path(post)
+            = link_to post.problem, post_path(post), data: { 'no-turbolink': '' }
           %td
             = link_to 'Edit', edit_post_path(post)
             %br
